--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,21 @@
----
----
+@article{wang2025waveletdiff,
+  title={WaveletDiff: Multilevel Wavelet Diffusion For Time Series Generation},
+  author={Yu-Hsiang Wang and Olgica Milenkovic},
+  journal={In submission},
+  year={2025},
+  selected={true}
+}
+
+@article{niu2025dmol,
+  title={DMol: A Schedule-Driven Diffusion Model for Highly Efficient and Versatile Molecule Generation},
+  author={Peizhi Niu and Yu-Hsiang Wang and Vishal Rana and Chetan Rupakheti and Abhishek Pandey and Olgica Milenkovic},
+  journal={NeurIPS 2025},
+  year={2025},
+  arxiv={2504.06312},
+  archivePrefix={arXiv},
+  url={https://arxiv.org/abs/2504.06312}, 
+  selected={true}
+}
 
 @article{wang2024clue,
   title={CLUE: Concept-Level Uncertainty Estimation for Large Language Models},
@@ -11,15 +27,3 @@
   url={https://arxiv.org/abs/2409.03021}, 
   selected={true}
 }
-
-@article{niu2025dmol,
-  title={DMol: A Schedule-Driven Diffusion Model for Highly Efficient and Versatile Molecule Generation},
-  author={Peizhi Niu and Yu-Hsiang Wang and Vishal Rana and Chetan Rupakheti and Abhishek Pandey and Olgica Milenkovic},
-  journal={arXiv},
-  year={2025},
-  arxiv={2504.06312},
-  archivePrefix={arXiv},
-  url={https://arxiv.org/abs/2504.06312}, 
-  selected={true}
-}
-
