--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,9 @@
   author={Yu-Hsiang Wang and Olgica Milenkovic},
   journal={In submission},
   year={2025},
+  arxiv={2510.11839},
+  archivePrefix={arXiv},
+  url={https://arxiv.org/abs/2510.11839},
   selected={true}
 }
 
