update papers and CV

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,6 +6,7 @@
   arxiv={2510.11839},
   archivePrefix={arXiv},
   url={https://arxiv.org/abs/2510.11839},
+  code={https://github.com/GarlicWang/WaveletDiff/},
   selected={true}
 }
 
@@ -16,7 +17,8 @@
   year={2025},
   arxiv={2504.06312},
   archivePrefix={arXiv},
-  url={https://arxiv.org/abs/2504.06312}, 
+  url={https://arxiv.org/abs/2504.06312},
+  code={https://github.com/liekon/Discrete-Graph-Generation},
   selected={true}
 }
 
@@ -27,6 +29,18 @@
   year={2024},
   arxiv={2409.03021},
   archivePrefix={arXiv},
-  url={https://arxiv.org/abs/2409.03021}, 
+  url={https://arxiv.org/abs/2409.03021},
   selected={true}
+}
+
+@article{hong2025thegau,
+      title={THeGAU: Type-Aware Heterogeneous Graph Autoencoder and Augmentation}, 
+      author={Ming-Yi Hong and Miao-Chen Chiang and Youchen Teng and Yu-Hsiang Wang and Chih-Yu Wang and Che Lin},
+      journal={In submission},
+      year={2025},
+      arxiv={2512.10589},
+      archivePrefix={arXiv},
+      url={https://arxiv.org/abs/2512.10589},
+      selected={false}
+      
 }
